--- a/theme/foyers/templates/mails/reservationJeunePro.html
+++ b/theme/foyers/templates/mails/reservationJeunePro.html
@@ -13,7 +13,7 @@
     <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
-    <h3><b>Jeune professionnel</b> : { profession } </h3>
+    <h3><span style="text-decoration: underline;">Jeune professionnel :</span> { profession } </h3><br/>
   </div>
 </tr></table><br/>
 
