--- a/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
@@ -33,8 +33,8 @@
         <div class="row">
             <div class="col-sm-4"><label for="boursier" class="label_style">{{rubedo.translate("Block.Inscription.Boursier")}} *</label></div>
             <div class="col-sm-8 display_left">
-                <input type="radio"  name="boursier" id="boursier" value="oui" ng-model="contactCtrl.contactData.boursier" ng-click="estBoursier" required>
-                            <label for="parents" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
+                <input type="radio"  name="boursier" id="boursier" value="oui" ng-model="contactCtrl.contactData.boursier" ng-click="estBoursier=true" required>
+                            <label for="boursier" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
                 <input type="radio"  name="boursier" id="non_boursier" value="non" ng-model="contactCtrl.contactData.boursier" >
                             <label for="non_boursier" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>	
             </div>
