--- a/theme/foyers/templates/mails/reservationEtudiant_ladefense.html
+++ b/theme/foyers/templates/mails/reservationEtudiant_ladefense.html
@@ -5,7 +5,7 @@
     <h3 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h3><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
-    <h3><b>Étudiant</b> : { etudes } </h3><br/>
+    <h3><span style="text-decoration: underline;"><b>Étudiant :</span> { etudes } </h3><br/>
     <h4>Date d'entrée au foyer souhaitée : { dateRentreeSouhaitee }</h4>
     <h4>Date de sortie du foyer souhaitée : { dateSortieSouhaitee }</h4>
   </div>
