--- a/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
+++ b/theme/foyers/templates/mails/reservationJeunePro_ladefense.html
@@ -10,10 +10,11 @@
 </div><br/>-->
 <table width=100%><tr>
   <div style='text-align:center'>
-    <h3 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h3><br/>
+    <h2 style='font-style:italic'>Candidature pour le foyer Paris - La Défense</h2><br/>
     <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
     <h3>{ age } ans (à ce jour)</h3>
-    <h3><span style="text-decoration: underline;">Jeune professionnel :</span> { profession } </h3><br/>
+    <h3><span style="text-decoration: underline;">Jeune professionnel :</span> { profession } </h3>
+    <h3 style='font-style:italic'>{ contrat }</h3><br/><br/>
     <h4>Date d'entrée au foyer souhaitée : { dateRentreeSouhaitee }</h4>
     <h4>Date de sortie du foyer souhaitée : { dateSortieSouhaitee }</h4>
   </div>
