--- a/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
@@ -1,8 +1,8 @@
     <div class="row">
         <div class="col-sm-4"><label for="paiementLoyer" class="label_style">{{rubedo.translate("Block.Inscription.Paiement.Loyer")}} *</label></div>
         <div class="col-sm-8 display_left">
-            <input type="radio"  name="paiementLoyer" id="parents" value="Les parents" ng-model="contactCtrl.contactData.paiementLoyer" required>
-                        <label for="parents" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Paiement.Loyer.Parents")}}</label>	
+            <input type="radio"  name="paiementLoyer" id="parParents" value="Les parents" ng-model="contactCtrl.contactData.paiementLoyer" required>
+                        <label for="parParents" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Paiement.Loyer.Parents")}}</label>	
             <input type="radio"  name="paiementLoyer" id="resident" value="Le résident lui-même" ng-model="contactCtrl.contactData.paiementLoyer" >
                         <label for="resident" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Paiement.Loyer.Resident")}}</label>	
         </div>
