--- a/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_revenus_ladefense.html
@@ -22,7 +22,7 @@
             <div class="col-sm-8"><input class="form-control" type="number" id="bourse" ng-model="contactCtrl.contactData.bourse" name="bourse" required></div>
         </div>
     </div>
-    <div ng-if="!etudiant || stageouformationPro">
+    <div ng-if="!etudiant || contactCtrl.stageouformationPro">
         <div class="row" >
             <div class="col-sm-4"><label for="salaire" class="label_style">{{rubedo.translate("Block.Inscription.Salaire")}} *</label></div>
             <div class="col-sm-8"><input class="form-control" type="number" id="salaire" ng-model="contactCtrl.contactData.salaire" name="salaire" required></div>
