--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -22,7 +22,10 @@
 		<div class="text-article" >
 			<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
 			<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
-			<a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a><br/>
+			<a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a><br/><br/>
+			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('objectif')}}</b></p>
+			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('objectif')}}"></rubedo-field><!--Description-->
+			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('description')}}</b></p><br/>
 			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('description')}}"></rubedo-field><!--Description-->
 			<div class="row" >
 				<div class="text-article">
@@ -37,6 +40,14 @@
 	<div class="row" id="infos_pratiques">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
+			<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
+				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
+					<p class="capital">{{contentDetailCtrl.getLabelByName('nombreHeures)}}</p>
+				</div>
+				<div class="col-xs-12 col-sm-8 ">
+					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('nombreHeures')}}"></rubedo-field>
+				</div>
+			</div>
 			<div ng-if="fieldEntity['annonces']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 					<p class="capital">{{contentDetailCtrl.getLabelByName('annonces')}}</p>
