--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -40,14 +40,14 @@
 	<div class="row" id="infos_pratiques">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
-			<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
+			<!--<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 					<p class="capital">{{contentDetailCtrl.getLabelByName('nombreHeures)}}</p>
 				</div>
 				<div class="col-xs-12 col-sm-8 ">
 					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('nombreHeures')}}"></rubedo-field>
 				</div>
-			</div>
+			</div>-->
 			<div ng-if="fieldEntity['annonces']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 					<p class="capital">{{contentDetailCtrl.getLabelByName('annonces')}}</p>
