--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -22,10 +22,10 @@
 		<div class="text-article" >
 			<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
 			<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
-			<a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a><br/><br/>
+			<div style="text-align:center"></div><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/><br/>
 			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('objectif')}}</b></p>
-			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('objectif')}}"></rubedo-field><!--Description-->
-			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('description')}}</b></p><br/>
+			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('objectif')}}"></rubedo-field><br/><!--Description-->
+			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('description')}}</b></p>
 			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('description')}}"></rubedo-field><!--Description-->
 			<div class="row" >
 				<div class="text-article">
