--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -18,11 +18,13 @@
 
 
 <div class="container-fluid">
-	<div class="row bg-white">
+	<div class="row">
 		<div class="text-article" >
-			<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
-			<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
-			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/><br/>
+			<div class="bg-white">
+				<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+				<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
+				<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/><br/>
+			</div>
 			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('objectif')}}</b></p>
 			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('objectif')}}"></rubedo-field><br/><!--Description-->
 			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('description')}}</b></p>
@@ -37,7 +39,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" id="infos_pratiques">
+	<div class="row" id="infos_pratiques bg-white">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
 			<!--<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
@@ -112,7 +114,7 @@
 		
 	</div>
 	<div class="row border-top" style="margin-top:24px" ng-if="contentDetailCtrl.linkedContents[0]">
-		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Service.Opportunites", "D'autres opportunités :")}}</h3>
+		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Service.Opportunites", "D'autres opportunités...")}}</h3>
 		<div class="col-xs-12 col-sm-4 text-center" ng-repeat="content in contentDetailCtrl.linkedContents">
 			<a ng-href="{{content.url |cleanUrl}}">
 				<img ng-if="content['fields.image'][0]" ng-src="{{rubedo.imageUrl.getUrlByMediaId(content['fields.image'][0],{width:'420px',height:'200px',mode:'crop'})}}" style="width:90%">
