--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -18,13 +18,15 @@
 
 
 <div class="container-fluid">
+	<div class="row bg-white">
+		<div class="text-article" >
+			<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+			<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
+			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/>
+		</div>
+	</div>
 	<div class="row">
 		<div class="text-article" >
-			<div class="bg-white">
-				<rubedo-field class="txt-light text-left" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
-				<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
-				<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/><br/>
-			</div>
 			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('objectif')}}</b></p>
 			<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('objectif')}}"></rubedo-field><br/><!--Description-->
 			<p class="capital"><b>{{contentDetailCtrl.getLabelByName('description')}}</b></p>
@@ -39,7 +41,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" id="infos_pratiques bg-white">
+	<a name="infos_pratiques"></a>
+	<div class="row bg-white">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
 			<!--<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
@@ -113,7 +116,9 @@
 		</div>
 		
 	</div>
-	<div class="row border-top" style="margin-top:24px" ng-if="contentDetailCtrl.linkedContents[0]">
+	<div class="row border-top bg-white" style="margin-top:24px" ng-if="contentDetailCtrl.linkedContents[0]">
+	</div>
+	<div class="row"ng-if="contentDetailCtrl.linkedContents[0]">
 		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Service.Opportunites", "D'autres opportunités...")}}</h3>
 		<div class="col-xs-12 col-sm-4 text-center" ng-repeat="content in contentDetailCtrl.linkedContents">
 			<a ng-href="{{content.url |cleanUrl}}">
