--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -113,10 +113,10 @@
 				</div>
 			</div>			
 			
-		</div>
+		</div> 
 		
 	</div>
-	<div class="row border-top bg-white" style="margin-top:24px" ng-if="contentDetailCtrl.linkedContents[0]">
+	<div class="row border-top" style="margin-top:24px;background-color: white !important;" ng-if="contentDetailCtrl.linkedContents[0]">
 	</div>
 	<div class="row"ng-if="contentDetailCtrl.linkedContents[0]">
 		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Service.Opportunites", "D'autres opportunités...")}}</h3>
