--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -116,7 +116,7 @@
 		</div> 
 		
 	</div>
-	<div class="row border-top" style="margin-top:24px;background-color: white !important;" ng-if="contentDetailCtrl.linkedContents[0]">
+	<div class="row border-top bg-white" style="margin-top:24px;border-top: solid 2px #d5c5b5;" ng-if="contentDetailCtrl.linkedContents[0]">
 	</div>
 	<div class="row"ng-if="contentDetailCtrl.linkedContents[0]">
 		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Service.Opportunites", "D'autres opportunités...")}}</h3>
