--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	<a name="infos_pratiques"></a>
-	<div class="row bg-white">
+	<div class="row bg-white" style="border-bottom: solid 2px #d5c5b5; padding-bottom: 24px;">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
 			<!--<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
@@ -114,9 +114,6 @@
 			</div>			
 			
 		</div>
-		<div style="margin-top:24px;border-top: solid 2px #d5c5b5;" ng-if="contentDetailCtrl.linkedContents[0]">
-		</div>
-		
 	</div>
 	
 	<div class="row"ng-if="contentDetailCtrl.linkedContents[0]">
