--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -84,16 +84,15 @@
 					<rubedo-field  ng-if="rubedo.current.user.rights.canEdit" field ="{{contentDetailCtrl.getFieldByName('email')}}"></rubedo-field><span ng-if="rubedo.current.user.rights.canEdit">(visible car vous êtes connectés)</span>
 				</div>
 			</div>
-			<div ng-if="fieldEntity['website']" class="col-xs-12">
+			<div ng-if="fieldEntity['documentDetaille']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-					<p class="capital">{{contentDetailCtrl.getLabelByName('documentDetaille')}}</p>
+					<p class="capital text-left">{{contentDetailCtrl.getLabelByName('documentDetaille')}}</p>
 				</div>
 				<div class="col-xs-12 col-sm-8 ">
-					<p><a ng-href="{{contentDetailCtrl.content.fields.website}}" >{{contentDetailCtrl.content.fields.documentDetaille}}</a></p>
-					<rubedo-field  ng-if="rubedo.current.user.rights.canEdit" field ="{{contentDetailCtrl.getFieldByName('documentDetaille')}}"></rubedo-field>
-
+					<p><rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('documentDetaille')}}"></rubedo-field></p><!--Contact-->
 				</div>
 			</div>
+			
 			<div ng-if="fieldEntity['website']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 					<p class="capital">{{contentDetailCtrl.getLabelByName('website')}}</p>
