--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -45,20 +45,28 @@
 	<div class="row bg-white" style="border-bottom: solid 2px #d5c5b5; padding-bottom: 24px;">
 		<div class="text-article infos">
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
-			<!--<div ng-if="fieldEntity['nombreHeures']" class="col-xs-12">
+			<div ng-if="fieldEntity['heures']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-					<p class="capital">{{contentDetailCtrl.getLabelByName('nombreHeures)}}</p>
+					<p class="capital">{{contentDetailCtrl.getLabelByName('heures)}}</p>
 				</div>
 				<div class="col-xs-12 col-sm-8 ">
-					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('nombreHeures')}}"></rubedo-field>
+					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('heures')}}"></rubedo-field>
 				</div>
-			</div>-->
+			</div>
 			<div ng-if="fieldEntity['annonces']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 					<p class="capital">{{contentDetailCtrl.getLabelByName('annonces')}}</p>
 				</div>
 				<div class="col-xs-12 col-sm-8 ">
 					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('annonces')}}"></rubedo-field>
+				</div>
+			</div>
+			<div ng-if="fieldEntity['documentDetaille']" class="col-xs-12">
+				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
+					<p class="capital text-left">{{contentDetailCtrl.getLabelByName('documentDetaille')}}</p>
+				</div>
+				<div class="col-xs-12 col-sm-8 ">
+					<p><rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('documentDetaille')}}"></rubedo-field></p><!--Contact-->
 				</div>
 			</div>
 			<div ng-if="fieldEntity['position']" ng-init="showMap=false" class="col-xs-12">
@@ -70,14 +78,6 @@
 					<p ng-click="showMap= !showMap"><a href="" >{{rubedo.translate("Block.Inscription.VoirPlan", "Voir le plan")}}</a></p>
 				</div>
 				<rubedo-field ng-if="showMap" class="col-xs-12"  field =  "{{contentDetailCtrl.getFieldByName('position')}}"></rubedo-field><!--Plan-->
-			</div>
-			<div ng-if="fieldEntity['documentDetaille']" class="col-xs-12">
-				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-					<p class="capital text-left">{{contentDetailCtrl.getLabelByName('documentDetaille')}}</p>
-				</div>
-				<div class="col-xs-12 col-sm-8 ">
-					<p><rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('documentDetaille')}}"></rubedo-field></p><!--Contact-->
-				</div>
 			</div>
 			<div ng-if="fieldEntity['nom']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
