--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -47,7 +47,7 @@
 			<div class="co-sm-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
 			<div ng-if="fieldEntity['heures']" class="col-xs-12">
 				<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-					<p class="capital">{{contentDetailCtrl.getLabelByName('heures')}}</p>
+					<p class="capital" style="text-align:left">{{contentDetailCtrl.getLabelByName('heures')}}</p>
 				</div>
 				<div class="col-xs-12 col-sm-8 ">
 					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('heures')}}"></rubedo-field>
