--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -82,7 +82,7 @@
 						<div class="panel-group">
 							<div class="panel panel-default">
 									<div class="panel-heading">
-										<div class="panel-title"><a  ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}" target="{{content.isExternal ? '_blank' : '_self'}}">{{content.fields.title}}</a></div>
+										<div class="panel-title"><a  ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}" target="{{content.isExternal ? '_blank' : '_self'}}">{{content.fields.text}}</a></div>
 									</div>
 							</div>
 						</div>
