--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -15,12 +15,12 @@
 <div class="container-fluid">
 	<div class="row bg-white">
 		<div class="text-article" >
-			<rubedo-field class="txt-light text-center" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
-			<rubedo-field class="txt-light capital" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
+			<rubedo-field class="txt-light text-center" style="margin-top: 50px;" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+			<rubedo-field class="txt-light capital" style="margin-top: 40px;" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
 			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/>
 		</div>
 	</div>
-		<div class="container-fluid bg-white" ng-if="!blockConfig.contentOnly">
+	<div class="container-fluid" ng-if="!blockConfig.contentOnly">
 		<header class="content prop parallax" ng-style="{'background-image':'url('+rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{width:'1650px',mode:'boxed'})+')'}" ng-if="fieldEntity['image']">
 		</header>
 	</div>
