--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -14,9 +14,11 @@
 
 <div class="container-fluid">
 	<div class="row bg-white">
-		<div class="text-article" >
-			<rubedo-field class="txt-light text-center" style="margin-top: 50px;" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
-			<rubedo-field class="txt-light capital" style="margin-top: 40px;" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
+		<div class="text-article" style="margin-top: 50px;">
+			<rubedo-field class="txt-light text-center"  field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+			<div style="margin-top: 40px;">
+				<rubedo-field class="txt-light capital" style="margin-top: 40px;" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
+			</div>
 			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/>
 		</div>
 	</div>
