--- a/theme/cte/templates/blocks/contentDetail/service.html
+++ b/theme/cte/templates/blocks/contentDetail/service.html
@@ -19,7 +19,7 @@
 			<div style="margin-top: 40px;">
 				<rubedo-field class="txt-light capital" style="margin-top: 40px;" field =  "{{contentDetailCtrl.getFieldByName('subTitle')}}"></rubedo-field><!--Sous-titre-->
 			</div>
-			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/><br/><br/>
+			<div style="text-align:center"><a href="#infos_pratiques" class="button rouge">{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</a></div><br/>
 		</div>
 	</div>
 	<div class="container-fluid" ng-if="!blockConfig.contentOnly">
