--- a/theme/ladefense/templates/blocks/formulaire/etudes_travail_ladefense.html
+++ b/theme/ladefense/templates/blocks/formulaire/etudes_travail_ladefense.html
@@ -151,5 +151,66 @@
         <div class="col-sm-4"><label for="diplomes" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Diplomes")}}</label></div>
         <div class="col-sm-8"><input class="form-control" type="text" id="diplomes" ng-model="contactCtrl.contactData.diplomes" name="diplomes"></div>
     </div>
-
+    
+    
+    
+    <!-- POUR LES STAGIAIRES OU LES JEUNES EN FORMATION PROFESSIONNELLE -->
+    
+    <div class="row" ng-if="etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="contrat" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Type")}} *</label></div>
+        <div class="col-sm-8">
+            <input type="radio"  name="contrat" id="alternance" value="ALTERNANCE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouformationPro = true;" required>
+                        <label for="alternance" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Alternance")}}</label>
+            <input type="radio"  name="contrat" id="apprentissage" value="APPRENTISSAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouformationPro = true;">
+                        <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>
+            <input type="radio"  name="contrat" id="stage" value="STAGE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouformationPro = true;">
+                        <label for="stage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Stage")}}</label>
+            <input type="radio"  name="contrat" id="classique" value="CLASSIQUE" ng-model="contactCtrl.contactData.contrat" ng-click="contactCtrl.stageouformationPro = false;">
+                        <label for="classique" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Etudes.Type.Classique")}}</label>
+        </div>
+    </div>
+    <div ng-if="etudiant && contactCtrl.stageouformationPro">
+        <div class="row">
+            <div class="col-sm-4"><label for="dateDebutContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Debut.Contrat")}} *</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateDebutContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateDebutContrat" ng-model="contactCtrl.contactData.dateDebutContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="contactCtrl.contactData.dateDebutContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutContrat', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateDebutContrat = (contactCtrl.contactData.dateDebutContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="row">
+            <div class="col-sm-4"><label for="dateFinContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Fin.Contrat")}} *</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateFinContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateFinContrat" ng-model="contactCtrl.contactData.dateFinContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="contactCtrl.contactData.dateFinContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateFinContrat', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateFinContrat = (contactCtrl.contactData.dateFinContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul> 
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><label for="employeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur")}} *</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="employeur" ng-model="contactCtrl.contactData.employeur" name="employeur" required></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><label for="adresseEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Adresse")}} *</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="adresseEmployeur" ng-model="contactCtrl.contactData.adresseEmployeur" name="adresseEmployeur" required></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><label for="telephoneEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Telephone")}} *</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="telephoneEmployeur" ng-model="contactCtrl.contactData.telephoneEmployeur" name="telephoneEmployeur" required></div>
+        </div>
+    </div>
      
