--- a/theme/ladefense/templates/blocks/formulaire/infos_complementaires_ladefense.html
+++ b/theme/ladefense/templates/blocks/formulaire/infos_complementaires_ladefense.html
@@ -1,4 +1,32 @@
     <!--NOM-->
+    <div class="row" >
+            <div class="col-sm-4"><label for="dateRentreeSouhaitee" class="label_style">{{rubedo.translate("Block.Inscription.Date.Entree.Souhaitee")}}*</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateRentreeSouhaitee" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateRentreeSouhaitee" ng-model="contactCtrl.contactData.dateRentreeSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="contactCtrl.contactData.dateRentreeSouhaitee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateRentreeSouhaitee', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateRentreeSouhaitee = (contactCtrl.contactData.dateRentreeSouhaitee |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul> 
+                </div>
+            </div>
+    </div>
+    <div class="row" >
+            <div class="col-sm-4"><label for="dateSortieSouhaitee" class="label_style">{{rubedo.translate("Block.Inscription.Date.Sortie.Souhaitee")}}*</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateSortieSouhaitee" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateSortieSouhaitee" ng-model="contactCtrl.contactData.dateSortieSouhaitee" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="contactCtrl.contactData.dateSortieSouhaitee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateSortieSouhaitee', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.dateSortieSouhaitee = (contactCtrl.contactData.dateSortieSouhaitee |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul> 
+                </div>
+            </div>
+    </div>
     <div class="row">
         <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}} *</label></div>
         <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="contactCtrl.contactData.loisirs" name="loisirs" required></textarea></div>
