--- a/theme/ladefense/css/foyers.less
+++ b/theme/ladefense/css/foyers.less
@@ -592,13 +592,14 @@ header.bg-image{
 }
 
 /*FOOTER*/
+/*FOOTER*/
 .footer{
 		margin-top:48px;
 		padding-top: 24px; padding-bottom: 24px;
 		background: @txt_blue;
-		p{color:white;opacity: 0.7 }
+		p{color:white;opacity: 1 }
 		p a{color: white; box-shadow: none !important;}
-		p a:hover{background-color: transparent !important; color:white !important;opacity: 0.9}
+		p a:hover{background-color: transparent !important; color:white !important;opacity: 1}
 		a:hover{text-decoration: none}
 }
 @media screen and (max-width:768px){
