--- a/theme/foyers/templates/blocks/simpleContactFoyers.html
+++ b/theme/foyers/templates/blocks/simpleContactFoyers.html
@@ -1,4 +1,4 @@
-<div ng-controller="ContactBlockController as contactCtrl" class="container">
+<!--<div ng-controller="ContactBlockController as contactCtrl" class="container">-->
         
         
         
@@ -125,7 +125,7 @@
             
         </ng-form>
 
-</div>
+<!--</div>-->
 
 
 <style>
