--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -63,6 +63,9 @@ h2.titre:after{
     [class*="col-xs-pull-"]{right:0;}
     [class*="col-xs-push-"]{left:0;}
 }
+@media screen and (min-width: @min_xs) and (max-width: @min_sm){
+    .container{width:@width_xxs}
+}
 /*buttons*/
 .btn-default{
 		background-color: @main; color:white; border-color: @main;
@@ -374,6 +377,12 @@ a:hover .redacteur{
     margin-top: 50px;
 				max-height: 100px;
   }
+		@media screen and (min-width:@min_xs){
+				max-height: 100px;
+		}
+		@media screen and (max-width:@min_xs){
+				max-width: 100%;
+		}
 
 
 
