--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -46,15 +46,15 @@
 			
 			<div class="col-sm-8 col-sm-push-2 col-xs-10 col-xs-push-1 presentationArticle" >
 				<rubedo-field field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
-				<div class="row">
+				<div class="row" style="margin-bottom:40px">
 					<div class="redacteur" ng-if="fieldEntity['redacteur'] && !fieldEntity['photoRedacteur']">
 						<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}"></rubedo-field><!--Rédacteur-->
 					</div>
 					<div class="redacteur" ng-if="fieldEntity['redacteur'] && fieldEntity['photoRedacteur']">
-						<div class="col-sm-2 detail-img">
+						<div class="col-xs-2 detail-img">
 							<img ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['photoRedacteur']) }}" alt=""/>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-xs-push-1 col-xs-6 col-sm-7">
 							<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}"></rubedo-field><!--Rédacteur--> 
 						</div>
 					</div>
