--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -383,6 +383,7 @@ a:hover .redacteur{
 		}
 		@media screen and (max-width:@min_xs){
 				.detail-img img{max-width: 100%;}
+				h1 {text-align:center;}
 		}
 
 
