--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -373,17 +373,18 @@ a:hover .redacteur{
 		margin-bottom: 80px !important;
 }
 /*PHOTO DU REDACTEUR*/
+.detail-img{
+			text-align:center;
+}
 .detail-img img{
     margin-top: 50px;
-				max-height: 100px;
-				text-align:center;
   }
 		@media screen and (min-width:@min_xs){
 				.detail-img img{max-height: 100px;}
 		}
 		@media screen and (max-width:@min_xs){
 				.detail-img img{max-width: 100%;}
-				h1 {text-align:center;}
+				h1 {text-align:center !important;}
 		}
 
 
