--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -63,9 +63,9 @@ h2.titre:after{
     [class*="col-xs-pull-"]{right:0;}
     [class*="col-xs-push-"]{left:0;}
 }
-@media screen and (min-width: @min_xs) and (max-width: @min_sm){
-    .container{width:@width_xxs}
-}
+//@media screen and (min-width: @min_xs) and (max-width: @min_sm){
+//    .container{width:@width_xxs}
+//}
 /*buttons*/
 .btn-default{
 		background-color: @main; color:white; border-color: @main;
