--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -361,6 +361,11 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 				text-transform: uppercase;font-size: 14px;
     margin: 50px 0px 50px;
 }
+@media screen and (max-width:@min_xs){
+		.redacteur p{
+						text-align: center;
+		}
+}
 a .redacteur{
 		font-size: 0.9em;
 		text-transform: uppercase !important;
