--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -383,12 +383,10 @@ a:hover .redacteur{
 }
 .detail-img img{
     margin-top: 50px;
+				max-width: 100%;
   }
-		@media screen and (min-width:@min_xs){
-				.detail-img img{max-height: 100px;}
-		}
+		
 		@media screen and (max-width:@min_xs){
-				.detail-img img{max-width: 100%;}
 				h1 {text-align:center !important;}
 		}
 
