--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -405,8 +405,11 @@ p .resume {
 		text-align:justify !important;
 }
 
+
+
 .presentationArticle{
 		background-color: @beige;
+		margin-bottom:30px;
 }
 @media screen and (max-width:@min_xs){
 				.presentationArticle{
@@ -418,6 +421,10 @@ p .resume {
 				.presentationArticle{
 						padding-right: 25px !important;
       padding-left: 25px !important;
+				}
+				.padding-5 {
+						padding-left:5%;
+						padding-right:5%;
 				}
 		}
 
