--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row padding-5">
 					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class="contenu_article"></rubedo-field>
 				</div>		
 								<!-- ACCES ABONNE -->
