--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -212,6 +212,9 @@ display: inline-block; position: relative; width:100%;img{margin:30px 15% 50px; 
 		*{color:white;}
 		a:hover{text-decoration:none;font-weight:bold;color:white;}
 }
+@media screen and (max-width:@min_xs){
+		.footer{text-align:center;}
+}
 
 /*PRESENTATION VIGNETTE*/
 ul.presentation{
