--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -283,6 +283,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		z-index:2;
   border-top: 0.5px solid black;
   padding-top: 10px;
+		width:50%;
 		p{
 				color:black;
 				text-align: left;
@@ -334,11 +335,12 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		h4:hover{text-decoration: none; font-weight:bold}
 }
 .articlePresentation_3col{
-		height: 120px;
-  overflow-y: hidden;
+  height: 120px;
+		overflow-y: hidden;
   margin-bottom: 30px;
 		h4:hover{text-decoration: none; font-weight:bold}
 }
+
 
 
 
