--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -212,7 +212,7 @@ display: inline-block; position: relative; width:100%;img{margin:30px 15% 50px; 
 		*{color:white;}
 		a:hover{text-decoration:none;font-weight:bold;color:white;}
 }
-@media screen and (max-width:@min_xs){
+@media screen and (max-width:@min_sm){
 		.footer{text-align:center;}
 }
 
