--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -572,6 +572,7 @@ header.parallax.page{
 				background-attachment: scroll;
 	text-align: center;
 	h1{text-transform: uppercase; font-size: 6em; font-family: 'Oswald SemiBold';}
+	h2{text-transform: uppercase; font-size: 3em; font-family: 'Oswald SemiBold';}
 	height:700px;line-height: 400px;
 }
 @media screen and (max-width: @tablet) and (min-width: @mobile){
