--- a/theme/wtp18/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp18/templates/blocks/contentDetail/actualites.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>  
 		
-		<div class="container article">
+		<div class="article" style="margin-left: 15%; margin-right: 15%;">
 			<div class="row">  
 				<!--<div class=" col-xs-12">
 					<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials-share" >
@@ -40,7 +40,7 @@
 				<div class="col-xs-12 col-sm-8 col-md-8">
 					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
 				</div>
-				<div class="hidden-xs col-sm-4 col-md-push-1 col-md-3">
+				<div class="hidden-sm col-sm-4 col-md-push-1 col-md-3">
 					<div class="row" ng-controller="FacebookController as fcbCtrl" style="margin-bottom:48px" ">
 						<div class="fb-page" data-href="https://www.facebook.com/festivalwelcometoparadise"
 							 data-width="300" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" data-height="750">
